# cosmic-settings-daemon

./: Cargo.toml
printers-client/: Cargo.toml
printers-client/examples/: list_printer_attrs.rs  list_printers.rs
printers-client/src/: lib.rs
printers-core/: Cargo.toml
printers-core/src/: error.rs  grouping.rs  lib.rs  types.rs
printers-server/: Cargo.toml
printers-server/src/: backend.rs  context.rs  cups_backend.rs  lib.rs  server.rs
printers-server/src/cups_backend/: discovery.rs  helpers.rs  jobs.rs  metadata.rs  mod.rs  printer.rs
varlink-server/: Cargo.toml
varlink-server/src/: lib.rs
