[package]
name = "cosmic-settings-printers-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros"] }
cosmic-config.workspace = true
cosmic-settings-printers-core = { path = "../printers-core" }
cups_rs = { path = "../../cups-rs" }
serde = { version = "1.0", features = ["derive"] }

[dependencies.zlink]
workspace = true
default-features = false
features = ["server", "service", "tokio", "tracing"]
